--- a/views/profile-page/index.ejs
+++ b/views/profile-page/index.ejs
@@ -12,6 +12,7 @@
                     <ul class="dropdown">
                       <div class="arrow-up"></div>
                       <li><a href="/profile/new">Add new birthday</a></li>
+                      <div class="arrow-up"></div>
                       <li><a href="">My Templates</a></li>
                     </ul>
                   </li>
