--- a/views/profile-page/edit.ejs
+++ b/views/profile-page/edit.ejs
@@ -1,3 +1,5 @@
+<div class="new-birthday-form-container">
+
 <div class="form-container">
 
   <div class="panel panel-signup">
@@ -82,4 +84,5 @@
 </div>
 </div>
 
+</div>
 </div>
