--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -142,6 +142,69 @@ body
     background-color: #ffffff
 
 /* ------------------------ * /
+/* Contact Form
+/* ------------------------ * /
+.contact-error
+  visibility: hidden
+  color: #c0392b
+  font-weight: 600
+  font-size: 120%
+.success-contact-form
+  display: none
+  i
+    color: #1abc9c
+.content-header
+  color:#fcc500
+  font-size: 45px
+
+
+.section-content
+  text-align: center
+
+#contact
+  font-family: 'Teko', sans-serif
+  padding: 80px 0
+  width: 100%
+  width: 100vw
+  background: #3a6186 /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #3a6186 , $main-color)
+  background: linear-gradient(to left, #3a6186 , $main-color)
+  color : #fff
+
+.contact-section
+  padding-top: 40px
+
+.contact-section .col-md-6
+  width: 50%
+
+
+.form-line
+  border-right: 1px solid #B29999
+
+
+.form-group
+  margin-top: 10px
+
+label
+  line-height: 1em
+  font-weight: normal
+
+.form-control
+  color: #080808
+
+textarea.form-control
+  height: 135px
+   /* margin-top: px*/
+
+
+.submit
+  float: right
+  width: 150px
+  background-color: transparent
+  color: #fff
+
+
+/* ------------------------ * /
 /* SIGN UP CONTAINER
 /* ------------------------ * /
 .signup-wrapper
@@ -332,7 +395,7 @@ body
 /* FEATURES SECTION
 /* ------------------------ * /
 #feature-section
-  padding: 40px 0
+  padding: 100px 0
   h2
     color: #4c4c4c
     font-size: 180%
@@ -375,7 +438,7 @@ body
   font-size: 20px
   padding: 10px 20px 10px 20px
   text-decoration: none
-
+  cursor: pointer
 
 .friend-color
   background-color: $main-color
@@ -413,7 +476,6 @@ body
   color: #e54e42
 
 .new-birthday-container
-  // border-radius: 25px
   list-style: none
   text-align: center
   background: #36a4e7
@@ -492,7 +554,7 @@ body
 .dropdown
   display: none
   top: 54px
-  right: 0%
+  right: -18%
   z-index: 1
   position: absolute
   padding: 12px
@@ -519,7 +581,6 @@ body
     border-radius: 28px
     color: #ffffff
     font-size: 21px
-    padding: 10px 20px 10px 20px
     text-decoration: none
     &:hover
       background: #894ba3
@@ -554,11 +615,11 @@ body
 /* ADD NEW BIRTHDAY FORM
 /* ------------------------ * /
 .new-birthday-form-container
-  height: 100%
+  height: 100vh
   width: 100%
-  background: linear-gradient(rgba(0.33, 0, 0, 0.4), rgba(0.33, 0, 0, 0.4)), url('../images/form-background6.jpg')
-  background-position: center center
-  background-size: cover
+  background: #3a6186 /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #3a6186 , $main-color)
+  background: linear-gradient(to left, #3a6186 , $main-color)
 
 .birthday-title
   margin-bottom: 0 !important
@@ -656,10 +717,8 @@ select
     font-size: 120%
     color: #fff
     transition: all 0.4s ease-in-out
-    &:hover
-      padding: 5px 10px
-      border-radius: 50%
-      border: 1px solid #fff
+    &:focus
+      outline: none
 .delete-btn
   position: relative
   border: none
@@ -669,10 +728,8 @@ select
     font-size: 120%
     color: #fff
     transition: all 0.3s ease
-    &:hover
-      padding: 5px 10px
-      border-radius: 50%
-      border: 1px solid #fff
+    &:focus
+      outline: none
 .current-user
   color: #4c4c4c
 .profile-picture
