--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -7,7 +7,7 @@
 
 
       <div class="col-sm-7">
-        <h1>Welcome back!</h1>
+        <h1>Welcome!</h1>
         <h2>Now lets check your current list for future birthdays</h2>
 
       </div>
