--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -21,7 +21,7 @@
             <div class="panel-heading">
               <div class="row">
 
-                <img src="images/logo.png">
+                <img src="images/logo2.png">
                 <hr style="width: 20%; margin-left: 40%; border: 1px solid #456480">
 
                 <% if (typeof errorMessage !== "undefined") { %>
