--- a/views/profile-page/edit.ejs
+++ b/views/profile-page/edit.ejs
@@ -4,7 +4,7 @@
 
   <div class="panel panel-signup">
     <div class="panel-heading">
-        <img src="/images/logo.png">
+        <img src="/images/logo2.png">
     </div>
 
     <form id="signup-form" action="/profile/<%= birthday._id %>" method="post" role="form">
