--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -7,7 +7,7 @@
     <div class="col-sm-6">
       <div class="panel panel-signup">
         <div class="panel-heading">
-            <img src="images/logo.png">
+            <img src="images/logo2.png">
         </div>
 
         <form id="signup-form" action="/signup" method="post" role="form">
