--- a/views/home-page/index.ejs
+++ b/views/home-page/index.ejs
@@ -12,7 +12,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand"><img class="brand-logo" src="../images/logo.png"></a>
+            <a class="navbar-brand"><img class="brand-logo" src="../images/logo2.png"></a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
