--- a/views/profile-page/index.ejs
+++ b/views/profile-page/index.ejs
@@ -4,7 +4,7 @@
 <nav class="navbar navbar-inverse">
         <div class="container">
           <div class="navbar-header">
-            <img  class="logo" src="/images/logo.png">
+            <img  class="logo" src="/images/logo2.png">
           </div>
           <div id="navbar">
             <ul class="nav navbar-nav navbar-right">
