--- a/views/profile-page/new.ejs
+++ b/views/profile-page/new.ejs
@@ -4,7 +4,7 @@
 
   <div class="panel panel-signup">
     <div class="panel-heading">
-        <img src="../images/logo.png">
+        <img src="../images/logo2.png">
     </div>
 
     <form id="signup-form" action="/newBirthday" method="post" role="form">
