mobile first commit

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -4,6 +4,10 @@ $main-color: #1b95e0
 $patrick: 'Patrick Hand', cursive
 
 // gray #bfcbd5
+html
+  height: 100% !important
+  width: 100% !important
+
 *
   padding: 0
   margin: 0
@@ -16,7 +20,8 @@ body
   font-weight: 300
   text-rendering: optimizeLegibility
   font-size: 20px
-
+li
+  list-style: none
 .blur
   -webkit-filter: blur(3px)
   -moz-filter: blur(3px)
@@ -77,8 +82,12 @@ body
   border-color: #1b95e0
   border-radius: 25px
   transition: background-color 0.3s ease-out
+  @media screen and (max-width: 740px)
+    width: 50%
+    margin-left: 24%
   &:hover
     background-color: #0065aa !important
+
 
 
 /* ------------------------ * /
@@ -92,7 +101,7 @@ body
   background-size: cover
   background-position: center center
   text-align: center
-
+  z-index: -1
 
 .hero-text-box
   position: absolute
@@ -100,16 +109,41 @@ body
   top: 40%
   left: 35%
   transform: translate(-50%, -50%)
+  @media screen and (max-width: 740px)
+    position: relative
+    z-index: 0 !important
   h1
     font-size: 400%
     font-family: 'Caveat', cursive
     text-shadow: 1px 1px #4d4d4d
     color: #ffffff
+    @media screen and (max-width: 740px)
+      margin-left: 20%
+      font-size: 250%
+      text-align: left
   p
     color: #ffffff
     font-weight: 400
     word-spacing: 3px
     font-size: 120%
+    @media screen and (max-width: 740px)
+      font-size: 90%
+      text-align: left
+      margin-left: 20%
+      margin-bottom: 50px
+.navbar-toggle
+  border: none
+  margin-top: 20px
+  &:focus
+    outline: none !important
+    background-color: none !important
+.navbar-collapse,.collapse
+  background-color: #fff
+  position: absolute
+  width: 100%
+  @media screen and (max-width: 740px)
+    z-index: 999 !important
+
 
 .hero-login-btn,
 .hero-signup-btn
@@ -176,10 +210,14 @@ body
 
 .contact-section .col-md-6
   width: 50%
+  @media screen and (max-width: 740px)
+    width: 100%
 
 
 .form-line
   border-right: 1px solid #B29999
+  @media screen and (max-width: 740px)
+    border: none
 
 
 .form-group
@@ -207,6 +245,7 @@ textarea.form-control
 /* ------------------------ * /
 /* SIGN UP CONTAINER
 /* ------------------------ * /
+
 .signup-wrapper
   p
     font-size: 130%
@@ -214,6 +253,8 @@ textarea.form-control
     color: #fff
 #signup-form
   padding: 20px
+
+
   button
     background-color: $main-color
     color: #fff
@@ -222,10 +263,15 @@ textarea.form-control
 
 .body-background
   background: linear-gradient(rgba(0.33, 0, 0, 0.4), rgba(0.33, 0, 0, 0.4)), url('../images/form-background6.jpg')
-  background-position: center
-  background-size: cover
-  height: 100vh
+  background-position: center center
+  background-size: auto 100%
+  min-height: 100vh
   z-index: 0
+  @media screen and (max-width: 740px)
+    min-height: 100vh !important
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    -o-background-size: cover
 .alert-icon
   display: inline-block
 
@@ -308,6 +354,9 @@ textarea.form-control
   top: 50%
   left: 50%
   transform: translate(-50%, -50%)
+  @media screen and (max-width: 740px)
+    width: 99%
+    height: 100%
   h1
     color: #ddd
     font-family: 'Pacifico', cursive
@@ -413,6 +462,37 @@ textarea.form-control
 /* ------------------------ * /
 /* PROFILE
 /* ------------------------ * /
+.mobile-footer
+  background-color: #cde2ec
+  padding: 20px
+  a
+    margin-left: 29%
+    text-align: center
+    width: 40%
+    display: block
+    background-color: #e96a60
+    background-image: -moz-linear-gradient(top, #e54e42, #692c2c)
+    background-image: -o-linear-gradient(top, #e54e42, #692c2c)
+    background-image: linear-gradient(to bottom, #e54e42, #692c2c)
+    -webkit-border-radius: 28
+    -moz-border-radius: 28
+    border-radius: 28px
+    font-family: Arial
+    color: #ffffff
+    font-size: 20px
+    padding: 10px 20px 10px 20px
+    text-decoration: none
+    padding:
+  @media screen and (min-width: 840px)
+    display: none
+.profile-img-mobile
+  @media screen and (min-width: 840px)
+    display: none
+.profile-img-desktop
+  @media screen and (max-width: 740px)
+    display: none
+
+
 .family-color, .coworker-color,.friend-color
   margin-bottom: 10px !important
   color: #fff
@@ -425,6 +505,11 @@ textarea.form-control
   -webkit-box-shadow: -1px 6px 28px 0px rgba(0,0,0,0.15)
   -moz-box-shadow: -1px 6px 28px 0px rgba(0,0,0,0.15)
   box-shadow: -1px 6px 28px 0px rgba(0,0,0,0.15)
+  @media screen and (max-width: 740px)
+    width: 30%
+    padding: 5px !important
+    display: inline-block
+    margin: 0
 .family-color
   background-color: #39ca74
   background-image: -moz-linear-gradient(top, #39ca74, #62879e)
@@ -497,7 +582,10 @@ textarea.form-control
   font-weight: 400
   font-size: 70%
   text-transform: uppercase
-  transition: all 0.4s ease-in
+  transition: all 0.4s ease-
+  @media screen and (max-width: 740px)
+    display: none
+
   &:hover
     background-color: #bd4036 !important
 
@@ -510,6 +598,9 @@ textarea.form-control
   width: 100%
   height: 100vh
   background-color: #0197d2
+  @media screen and (max-width: 740px)
+    background-color: #fff
+
 
 .profile-container
   position: absolute
@@ -520,6 +611,8 @@ textarea.form-control
   padding: 20px
   height: 86vh
   background-color: #fff
+  @media screen and (max-width: 740px)
+    width: 100%
 .navbar-inverse
   height: 66px
   margin-bottom: 0
@@ -539,6 +632,10 @@ textarea.form-control
   position: relative
   list-style: none
   cursor: pointer
+  @media screen and (max-width: 740px)
+    z-index: 1
+    float: right
+    top: -48px
   i
     color: #ffffff !important
     padding: 10px 16px
@@ -614,6 +711,7 @@ textarea.form-control
 /* ------------------------ * /
 /* ADD NEW BIRTHDAY FORM
 /* ------------------------ * /
+
 .new-birthday-form-container
   height: 100vh
   width: 100%
@@ -684,13 +782,16 @@ select
   text-align: center
   label
     margin-right: 15px
-
 .form-container
   position: absolute
   top: 40%
   left: 50%
   transform: translateX(-50%) translateY(-50%)
   width: 40%
+  @media screen and (max-width: 740px)
+    top: 50%
+    width: 100%
+
 
 /* ------------------------ * /
 /* BIRTHDAY LIST
@@ -713,6 +814,9 @@ select
   text-decoration: none
   margin-right: 2%
   margin-left: 85%
+  @media screen and (max-width: 740px)
+    margin-left: 5%
+    margin-right: 10%
   i
     font-size: 120%
     color: #fff
@@ -724,6 +828,7 @@ select
   border: none
   background: transparent
   font-size: 120%
+
   i
     font-size: 120%
     color: #fff
