--- a/views/home-page/index.ejs
+++ b/views/home-page/index.ejs
@@ -1,6 +1,7 @@
 <div class="overlay">
   <div class="spinner"></div>
 </div>
+
 <section id="hero-section">
 
   <nav class="navbar navbar-default">
@@ -25,15 +26,13 @@
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
-      </nav>
+  </nav>
 
-  <div class="hero-text-box">
-      <h1>Don't remember a Birthday?</h1>
+    <div class="hero-text-box">
+      <h1 class="hero-h1">Don't remember a Birthday?</h1>
       <p class="lead">Don't worry anymore, BirthdayGenie is here to make your life easier</p>
       <a class="hero-login-btn"href="/signup">Sign Up</a>
-      <%# <a class="hero-signup-btn"href="/signup">Sign Up</a>%>
     </div>
-
 
 </section>
 
