--- a/views/profile-page/new.ejs
+++ b/views/profile-page/new.ejs
@@ -33,15 +33,15 @@
         <hr style="border: 3px solid #39ca74; border-radius: 25px;width: 10%; display: inline-block">
         <div class="checkbox">
           <label for="checkboxes-0">
-            <input name="family" class="family" id="checkboxes-0" value="family" type="checkbox">
+            <input name="family" class="family" id="checkboxes" value="family" type="checkbox">
             Family
           </label>
           <label for="checkboxes-0">
-            <input name="friend" class="friend" id="checkboxes-0" value="friend" type="checkbox">
+            <input name="friend" class="friend" id="checkboxes" value="friend" type="checkbox">
             Friends
           </label>
           <label for="checkboxes-0">
-            <input name="coworker" class="coworker" id="checkboxes-0" value="coworker" type="checkbox">
+            <input name="coworker" class="coworker" id="checkboxes" value="coworker" type="checkbox">
             Coworker | 'Friends'
           </label>
         </div>
