--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -138,10 +138,10 @@ li
     outline: none !important
     background-color: none !important
 .navbar-collapse,.collapse
-  background-color: #fff
-  position: absolute
-  width: 100%
   @media screen and (max-width: 740px)
+    background-color: #fff
+    position: absolute
+    width: 100%
     z-index: 999 !important
 
 
@@ -264,7 +264,7 @@ textarea.form-control
 .body-background
   background: linear-gradient(rgba(0.33, 0, 0, 0.4), rgba(0.33, 0, 0, 0.4)), url('../images/form-background6.jpg')
   background-position: center center
-  background-size: auto 100%
+  background-size: cover
   min-height: 100vh
   z-index: 0
   @media screen and (max-width: 740px)
