--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -622,6 +622,7 @@ textarea.form-control
   height: 86vh
   background-color: #fff
   @media screen and (max-width: 740px)
+    top: 57%
     width: 100%
 .navbar-inverse
   height: 66px
@@ -646,10 +647,8 @@ textarea.form-control
   cursor: pointer
   @media screen and (max-width: 740px)
     z-index: 1
-    float: right
-    top: 2%
-    left: 64%
-    transform: translateX(-50%)translateY(-50%)
+    top: -48px
+    left: 106%
   i
     color: #ffffff !important
     padding: 10px 16px
