--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -640,6 +640,8 @@ textarea.form-control
   img
     width: 230px
     margin-top: 16px
+    @media screen and (max-width: 740px)
+      margin-left: 8%
 
 .dropdown-btn
   position: relative
@@ -648,7 +650,7 @@ textarea.form-control
   @media screen and (max-width: 740px)
     z-index: 1
     top: -48px
-    left: 106%
+    left: 124%
   i
     color: #ffffff !important
     padding: 10px 16px
@@ -668,6 +670,8 @@ textarea.form-control
   z-index: 1
   position: absolute
   padding: 12px
+  @media screen and (max-width: 740px)
+    right: 55%
 
   li
     list-style: none
