--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -355,7 +355,7 @@ textarea.form-control
   position: absolute
   top: 50%
   left: 50%
-  transform: translate(-50%, -50%)
+  transform: translateX(-50%)translateY(-50%)
   @media screen and (max-width: 740px)
     width: 99%
     height: 100%
